{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 8,
  "lineage": "2b9e2614-cd49-89dc-df15-e68b2bd62e0f",
  "resources": [
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-055bb66df21bace92",
            "domain": "vpc",
            "id": "eipalloc-083df9371a2e5cb6b",
            "network_interface": "eni-00e0bcbb15cd74645",
            "private_dns": "ip-10-0-3-116.ec2.internal",
            "private_ip": "10.0.3.116",
            "public_dns": "ec2-3-221-129-206.compute-1.amazonaws.com",
            "public_ip": "3.221.129.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f73c14f0d3a4c717",
            "owner_id": "246212294438",
            "vpc_id": "vpc-01fbc66b670b96b85"
          }
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083df9371a2e5cb6b",
            "id": "nat-048bfe18a3f58c926",
            "network_interface_id": "eni-00e0bcbb15cd74645",
            "private_ip": "10.0.3.116",
            "public_ip": "3.221.129.206",
            "subnet_id": "subnet-0d8e501c986c03aa3"
          },
          "depends_on": [
            "aws_eip.eip"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways.module.myroutes",
      "mode": "managed",
      "type": "aws_route",
      "name": "r_priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b98799f818427b951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-048bfe18a3f58c926",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b98799f818427b95",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_route_table.rt_priv"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways.module.myroutes",
      "mode": "managed",
      "type": "aws_route",
      "name": "r_pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f73c14f0d3a4c717",
            "id": "r-rtb-02eda0e5711a946921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02eda0e5711a94692",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_route_table.rt_pub"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways.module.myroutes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b98799f818427b95",
            "owner_id": "246212294438",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-048bfe18a3f58c926",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-01fbc66b670b96b85"
          }
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways.module.myroutes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02eda0e5711a94692",
            "owner_id": "246212294438",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f73c14f0d3a4c717",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-01fbc66b670b96b85"
          }
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways.module.myroutes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065b47aa48d4ab68d",
            "route_table_id": "rtb-0b98799f818427b95",
            "subnet_id": "subnet-0a0fbd56c09667752"
          },
          "depends_on": [
            "aws_route_table.rt_priv"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways.module.myroutes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_pub",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086c0716e2a70a2f7",
            "route_table_id": "rtb-02eda0e5711a94692",
            "subnet_id": "subnet-0d8e501c986c03aa3"
          },
          "depends_on": [
            "aws_route_table.rt_pub"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec9c1191ef2c1dac",
            "route_table_id": "rtb-02eda0e5711a94692",
            "subnet_id": "subnet-09e012a8c98e7ac3d"
          },
          "depends_on": [
            "aws_route_table.rt_pub"
          ]
        }
      ]
    },
    {
      "module": "module.myec2.module.mysg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246212294438:security-group/sg-09663df8d360e8247",
            "description": "Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09663df8d360e8247",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_all",
            "name_prefix": null,
            "owner_id": "246212294438",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01fbc66b670b96b85"
          }
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246212294438:subnet/subnet-0a0fbd56c09667752",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a0fbd56c09667752",
            "map_public_ip_on_launch": false,
            "owner_id": "246212294438",
            "vpc_id": "vpc-01fbc66b670b96b85"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246212294438:subnet/subnet-0015ef310e613c977",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0015ef310e613c977",
            "map_public_ip_on_launch": false,
            "owner_id": "246212294438",
            "vpc_id": "vpc-01fbc66b670b96b85"
          }
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246212294438:subnet/subnet-0d8e501c986c03aa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d8e501c986c03aa3",
            "map_public_ip_on_launch": false,
            "owner_id": "246212294438",
            "vpc_id": "vpc-01fbc66b670b96b85"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246212294438:subnet/subnet-09e012a8c98e7ac3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-09e012a8c98e7ac3d",
            "map_public_ip_on_launch": false,
            "owner_id": "246212294438",
            "vpc_id": "vpc-01fbc66b670b96b85"
          }
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246212294438:vpc/vpc-01fbc66b670b96b85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0509b7b81ce11aadd",
            "default_route_table_id": "rtb-0a1270c3f391e4281",
            "default_security_group_id": "sg-0563b5d32355a09cb",
            "dhcp_options_id": "dopt-61208c18",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01fbc66b670b96b85",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a1270c3f391e4281",
            "owner_id": "246212294438"
          }
        }
      ]
    }
  ]
}